--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Dinoplasty</h1>
                 <form id="dino-form">
                     <div class="input-group">
-                        <input class="input-group-field" type="text" name="dinoName" placeholder="Name a dinosaur">
+                        <input class="input-group-field" type="text" name="dinoName" placeholder="Name a dinosaur" autofocus required>
                         <div class="input-group-button">    
                             <button class="button success" type="submit">Add dino</button>
                         </div>
